--- a/website/public/locales/de/translation.json
+++ b/website/public/locales/de/translation.json
@@ -92,7 +92,7 @@
   "events.event-name-description": "Der Name des Events wird auf der Rangliste angezeigt",
   "events.event-name-placeholder": "Mein tolles Event",
   "events.event-date": "Veranstaltungsdatum",
-  "events.event-date-descriprion": "Das Datum, an dem die Veranstaltung stattfinden wird",
+  "events.event-date-description": "Das Datum, an dem die Veranstaltung stattfinden wird",
   "events.event-date-next-month": "Nächster Monat",
   "events.event-date-previous-month": "Vorheriger Monat",
   "events.event-date-today": "Heute",
@@ -118,7 +118,7 @@
   "events.event-type": "Art der Veranstaltung",
   "events.event-type-description": "",
   "events.type.private-workshop": "Privater Workshop",
-  "events.type.offical-workshop": "Öffentlicher Workshop",
+  "events.type.official-workshop": "Öffentlicher Workshop",
   "events.type.private-track-race": "Privates Streckenrennen",
   "events.type.official-track-race": "Öffentliches Bahnrennen",
   "events.type.other": "Andere",
@@ -269,14 +269,12 @@
   "home.header": "DeepRacer Eventmanager",
   "home.leaderboard-description": "Auf Event-Bestenlisten zugreifen",
   "home.leaderboard": "Bestenliste",
-  "home.models-description": "Liste der Models, die du hochgeladen hast",
+  "home.models-description": "Model Verwaltung",
   "home.models": "Modelle",
   "home.quarantined-description": "Alle Modelle, die beim Upload als verdächtig markiert wurden",
   "home.quarantined": "Unter Quarantäne gestellte Modelle",
   "home.time-keeper-description": "Zeitmesser für die Veranstaltung",
   "home.time-keeper": "Zeitwächter",
-  "home.upload-description": "Lade Modelle in DREM hoch, um sie an Rennwagen zu schicken",
-  "home.upload": "Hochladen",
   "models.all-header": "Modelle",
   "models.breadcrumb": "Modelle",
   "models.clear-filter": "Filter löschen",
@@ -364,16 +362,16 @@
   "timekeeper.racer-selector.loading-racers": "Rennfahrer werden geladen",
   "timekeeper.racer-selector.loading-cars": "Fahrzeuge werden geladen",
   "timekeeper.racer-selector.loading": "wird geladen",
-  "timekeeper.racer-selector.select-event": "Veranstaltung auswählen",
+  "event-selector-modal.select-event": "Veranstaltung auswählen",
   "timekeeper.racer-selector.select-racer": "Wähle einen Rennfahrer aus",
-  "timekeeper.racer-selector.select-track": "Strecke",
+  "event-selector-modal.select-track": "Strecke",
   "timekeeper.racer-selector.select-car": "Wähle ein Fahrzeug aus der Event-Fahrzeugflotte aus",
   "timekeeper.racer-selector.select-car-empty": "Die Veranstaltung wurde keiner Fahrzeugflotte zugeordnet oder es gibt keine Fahrzeug(e) in der Flotte",
   "timekeeper.racer-selector.select-model": "Modell auswählen",
   "timekeeper.racer-selector.select-model-empty": "Der Benutzer hat keine Modelle hochgeladen",
   "timekeeper.racer-selector.selected": "Ausgewählt",
   "timekeeper.racer-selector.racer-section-header": "Auswahl des Rennfahrers",
-  "timekeeper.racer-selector.event-section-header": "Event- und Streckenauswahl",
+  "event-selector-modal.event-section-header": "Event- und Streckenauswahl",
   "timekeeper.recorded-laps": "Aufgezeichnete Runden",
   "timekeeper.resets": "Zurückgesetzt",
   "timekeeper.start-race": "Rennen starten",
@@ -438,7 +436,7 @@
   "common.panel.split-panel-position-description": "Standart Split Panel Position für den Service wählen",
   "common.panel.split-panel-position-label": "Split Panel Position",
   "common.panel.split-panel-preference-title": "Split panel Einstellungen",
-  "common.panel.split-panel-rezize-label": "Split Panel Größe ändern",
+  "common.panel.split-panel-resize-label": "Split Panel Größe ändern",
   "events.created-by": "Erzeugt von",
   "events.landing-page-link": "Landing Page",
   "events.landing-page-link-new-tab": "In neuem Tab öffnen",
@@ -457,7 +455,7 @@
   "events.streaming-overlay-link-chroma-same-tab": "In diesem Tab öffnen",
   "events.tracks.atoz-speedway": "A to Z Speedway",
   "fleets.created-by": "Angelegt von",
-  "groups.detail.infromation": "Nutzerinformationen",
+  "groups.detail.information": "Nutzerinformationen",
   "groups.notfications-error": "{{errorMessage}}, Gruppenzugehörigkeit konnte für {{userName}} nicht geändert werden",
   "models.delete-modal.description": "Möchtest Du das Model wirklich löschen?",
   "models.delete-modal.header": "Model löschen?",
@@ -482,7 +480,7 @@
   "race-admin.multi-select.total-laps": "Gesamte Runden",
   "race-admin.multi-select.total-resets": "Gesamt Resets",
   "race-admin.multi-select.unique-racer-count": "Anzahl eindeutige Rennfahrer(innen)",
-  "table.select-visible-colunms": "Sichtbare Spalten wählen",
+  "table.select-visible-columns": "Sichtbare Spalten wählen",
   "topnav.models-own": "Modele Verwalten",
   "topnav.operator": "Operator",
   "topnav.registration": "Registrierung",
@@ -517,5 +515,24 @@
   "users.notifications.creating-user": "Benutzer {{username}} anlegen...",
   "users.notifications.user-created": "Benutzer {{username}} angelegt",
   "users.notifications.user-not-created": "Benutzer {{username}} konnte nicht angelegt werden, {{errorMessage}}",
-  "user-profile.settings.form.pw_changed": "Passwort erflogreich geändert"
+  "user-profile.settings.form.pw_changed": "Passwort erflogreich geändert",
+  "events.selector.current-events": "Aktuelle Events",
+  "events.selector.events-with-missing-date": "Events ohne Event Datum",
+  "events.selector.future-events": "Zukünftige Events",
+  "events.selector.option-description": "Event Datum: {{eventDate}}, Leiter: {{eventLead}}",
+  "events.selector.past-events": "Vergangene Events",
+  "events.selector.track": "Strecke: {{trackId}}",
+  "events.selector.track-type": "Typ: {{trackType}}",
+  "notifications.create-item-error": "{{itemType} {{itemName}} konnte nicht angelegt werden, {{errorMessage}}",
+  "notifications.create-item-success": "{{itemType}} {{itemName}} angelegt",
+  "notifications.creating-item": "Erstelle {{itemType}} {{itemName}}...",
+  "notifications.delete-item-error": "{{itemType}} {{itemName}} konnte nicht gelöscht werden, {{errorMessage}}",
+  "notifications.delete-item-success": "{{itemType}} {{itemName}} gelöscht",
+  "notifications.deleting-item": "Lösche {{itemType}} {{itemName}}...",
+  "notifications.item-type-event": "Event",
+  "notifications.update-item-error": "{{itemType}} {{itemName}} konnte nicht geändert werden, {{errorMessage}}",
+  "notifications.update-item-success": "{{itemType}} {{itemName}} geändert",
+  "notifications.updating-item": "Ändere {{itemType}} {{itemName}}...",
+  "topnav.stats": "Statistiken",
+  "user-profile.settings.form.label.new_pw_conf.ph": "Bestätige neues Passwort"
 }
