--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -4,6 +4,7 @@
   "button.cancel": "Cancel",
   "button.clear-selected": "Clear selected",
   "button.confirm": "Confirm",
+  "button.save": "Save",
   "button.copy": "Copy",
   "button.delete": "Delete",
   "button.edit": "Edit",
@@ -25,7 +26,7 @@
   "common.panel.split-panel-preference-title": "Split panel preferences",
   "common.panel.split-panel-position-label": "Split panel position",
   "common.panel.split-panel-position-description": "Choose the default split panel position for the service.",
-  "common.panel.split-panel-rezize-label": "Resize split panel",
+  "common.panel.split-panel-resize-label": "Resize split panel",
 
   "car-activation.breadcrumb": "Car activation",
   "car-activation.copied-to-clipboard": "copied to clipboard",
@@ -107,10 +108,11 @@
   "events.delete-warning": "Are you sure you want to delete these event(s)?",
   "events.event-id": "Event ID",
   "events.event-name": "Event name",
+  "events.add-track-to-event": "Add additional track to event",
   "events.event-name-description": "The Name of the Event, will be displayed on leaderboard",
   "events.event-name-placeholder": "My awesome event",
   "events.event-date": "Event date",
-  "events.event-date-descriprion": "The date for when the event will be held",
+  "events.event-date-description": "The date for when the event will be held",
   "events.event-date-next-month": "Next month",
   "events.event-date-previous-month": "Previous month",
   "events.event-date-today": "Today",
@@ -121,6 +123,8 @@
   "events.filter": "Filter cars",
   "events.car-fleet": "Car fleet",
   "events.track-type": "Track",
+  "events.track-prefix": "Track {{trackId}}",
+  "events.combined": "Combined",
   "events.country": "Country",
   "events.country-description": "Where will the event be hosted",
   "events.header": "Events admin",
@@ -143,7 +147,7 @@
   "events.event-type": "Type of Event",
   "events.event-type-description": "",
   "events.type.private-workshop": "Private workshop",
-  "events.type.offical-workshop": "Public workshop",
+  "events.type.official-workshop": "Public workshop",
   "events.type.private-track-race": "Private track race",
   "events.type.official-track-race": "Public track race",
   "events.type.other": "Other",
@@ -173,7 +177,10 @@
   "events.race.ranking.average-lap-time": "Average lap time",
   "events.race.ranking.finish-x-laps": "Finish x laps",
   "events.race.race-customisations": "Race customisations",
+  "events.race.allowed-races-per-racer-label": "Allowed races per racer",
+  "events.race.allowed-races-per-racer-description": "The maximum number of races a racer is allowed to do during an event",
 
+  "events.sponsor.label": "Sponsor",
   "events.fleet-info.label": "Car Fleet",
   "events.fleet-info.description": "Select the fleet of cars to use for the event.",
 
@@ -188,6 +195,13 @@
   "events.split-panel.multi-choice-text": "Select 1 event to see the event details",
   "events.split-panel.empty": "Select an event to see its details",
   "events.split-panel-header": "events selected",
+
+  "events.selector.current-events": "Current events",
+  "events.selector.future-events": "Future events",
+  "events.selector.past-events": "Past events",
+  "events.selector.events-with-missing-date": "Events with missing event date",
+  "events.selector.option-description": "Event date: {{eventDate}}, Lead: {{eventLead}}",
+  "events.selector.track-type": "Track type: {{trackType}}",
 
   "race-admin.header": "Race management",
   "race-admin.description": "",
@@ -241,7 +255,7 @@
   "fleets.edit-cars.taillight-label": "Tail Light",
   "fleets.edit-cars.update-tail-lights": "Update tail lights",
   "fleets.edit-cars.title": "Car Control",
-  "fleets.edit-cars.restart-ros": "Restart ROS Service",
+  "fleets.edit-cars.restart-ros": "Restart DeepRacer Service",
   "fleets.edit-cars.stop": "Emergency Stop",
   "fleets.error-exists": "Fleet already exists",
   "fleets.error-text-regex": "Must match regex: ^[a-zA-Z0-9-_]+$",
@@ -271,10 +285,11 @@
   "groups.detail.header-group-member": "Group member?",
   "groups.detail.header-last-modified-date": "Last modified date",
   "groups.detail.header-name": "User name",
-  "groups.notfications-error": " {{errorMessage}}, group membership could not be altered for {{userName}}",
+  "groups.detail.header-email": "Email address",
+  "groups.notifications-error": " {{errorMessage}}, group membership could not be altered for {{userName}}",
   "groups.detail.header-user-enabled": "User enabled?",
   "groups.detail.header": "Users",
-  "groups.detail.infromation": "User information",
+  "groups.detail.information": "User information",
   "groups.detail.loading-users": "Loading users",
   "groups.detail.page-size-label": "users",
   "groups.filter-groups": "Filter groups",
@@ -321,11 +336,22 @@
 
   "users-list.header": "List users",
 
+  "notifications.item-type-event": "Event",
+  "notifications.creating-item": "Creating {{itemType}} {{itemName}}...",
+  "notifications.create-item-success": "{{itemType}} {{itemName}} created",
+  "notifications.create-item-error": "{{itemType} {{itemName}} could not be created, {{errorMessage}}",
+  "notifications.updating-item": "Updating {{itemType}} {{itemName}}...",
+  "notifications.update-item-success": "{{itemType}} {{itemName}} updated",
+  "notifications.update-item-error": "{{itemType}} {{itemName}} could not be updated, {{errorMessage}}",
+  "notifications.deleting-item": "Deleting {{itemType}} {{itemName}}...",
+  "notifications.delete-item-success": "{{itemType}} {{itemName}} deleted",
+  "notifications.delete-item-error": "{{itemType}} {{itemName}} could not be deleted, {{errorMessage}}",
+
   "home.all-models-description": "List of the models uploaded by users",
   "home.all-models": "All models",
   "home.breadcrumb": "Home",
   "home.car-activation-description": "Create the commands to add a car to DREM",
-  "home.car-activation": "Car activiation",
+  "home.car-activation": "Car activation",
   "home.cars-description": "List of all cars registered (online and offline)",
   "home.cars": "Cars",
   "home.description": "Description",
@@ -336,14 +362,12 @@
   "home.header": "DeepRacer Event Manager",
   "home.leaderboard-description": "Access event leaderboards",
   "home.leaderboard": "Leaderboard",
-  "home.models-description": "List of the models you have uploaded",
+  "home.models-description": "Model management",
   "home.models": "Models",
   "home.quarantined-description": "Any models that have been flagged as suspicious during upload",
   "home.quarantined": "Quarantined models",
   "home.time-keeper-description": "Event time keeper",
   "home.time-keeper": "Time keeper",
-  "home.upload-description": "Upload models into DREM ready to send to cars for racing",
-  "home.upload": "Upload",
 
   "models.all-header": "Models",
   "models.breadcrumb": "Models",
@@ -397,7 +421,7 @@
   "table.previous-page": "Previous page",
   "table.registration-date": "Registration date",
   "table.select-page-size": "Select page size",
-  "table.select-visible-colunms": "Select visible colunms",
+  "table.select-visible-columns": "Select visible columns",
   "table.we-cant-find-a-match": "We can't find a match",
   "table.wrap-lines": "Wrap lines",
   "table.wrap-lines-description": "Check to see all the text and wrap the lines",
@@ -413,6 +437,7 @@
 
   "timekeeper.race-setup-page.page-header": "Race setup",
   "timekeeper.race-setup-page.page-description": "Configure the race",
+  "timekeeper.race-setup-page.racing-on-trackId": "racing on track",
 
   "timekeeper.race-page.page-header": "Timer",
   "timekeeper.race-page.warning-modal.text": "Are you sure you want to end the race?",
@@ -452,21 +477,26 @@
   "timekeeper.racer-selector.loading-racers": "Loading racers",
   "timekeeper.racer-selector.loading-cars": "Loading cars",
   "timekeeper.racer-selector.loading": "loading",
-  "timekeeper.racer-selector.select-event": "Select event",
   "timekeeper.racer-selector.select-racer": "Select racer",
-  "timekeeper.racer-selector.select-track": "Track",
   "timekeeper.racer-selector.select-car": "Select car from event car fleet",
   "timekeeper.racer-selector.select-car-empty": "Event has not been associated with a car fleet or there is no cars in the fleet",
   "timekeeper.racer-selector.select-model": "Select model",
   "timekeeper.racer-selector.select-model-empty": "The users.header-username has not upload any models",
   "timekeeper.racer-selector.selected": "Selected",
   "timekeeper.racer-selector.racer-section-header": "Racer selection",
-  "timekeeper.racer-selector.event-section-header": "Event & track selection",
+  "timekeeper.racer-selector.races-by-user": "Races done by racer",
+  "timekeeper.racer-selector.number-of-current-races": "Current:",
+  "timekeeper.racer-selector.max-number-of-allowed-races": "Max:",
   "timekeeper.recorded-laps": "Recorded Laps",
   "timekeeper.resets": "Resets",
   "timekeeper.start-race": "Start race",
   "timekeeper.time-left": "Time Left",
   "timekeeper.undo-false-finish": "Undo false finish",
+
+  "event-selector-modal.select-track": "Track",
+  "event-selector-modal.select-event": "Select event",
+  "event-selector-modal.event": "Event",
+  "event-selector-modal.event-section-header": "Event & track selection",
 
   "topnav.admin": "Admin",
   "topnav.all-models": "All models",
@@ -497,6 +527,7 @@
   "topnav.registration": "Registration",
   "topnav.users": "Users",
   "topnav.operator": "Operator",
+  "topnav.stats": "Statistics",
 
   "upload.breadcrumb": "Upload models",
   "upload.chose-file": "Upload model",
