Streamlinks are now per track and show in the track info panel when looking at an event

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -153,6 +153,7 @@
   "events.type.other": "Other",
 
   "events.leaderboard.header": "Header text",
+  "events.leaderboard.links": "Leaderboard Links",
   "events.leaderboard.header-description": "Text displayed on top of the leaderboard",
   "events.leaderboard.footer": "Footer text",
   "events.leaderboard.footer-description": "Text displayed at the bottom of the leaderboard",
