Enhanced property search in tables

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -3,6 +3,7 @@
 
   "button.cancel": "Cancel",
   "button.clear-selected": "Clear selected",
+  "button.clear-filters": "Clear filters",
   "button.confirm": "Confirm",
   "button.save": "Save",
   "button.copy": "Copy",
@@ -19,6 +20,9 @@
   "common.yes": "Yes",
   "common.no": "No",
 
+  "common.no-matches": "No matches",
+  "common.we-cant-find-a-match": "We can't find a match",
+
   "common.panel.open": "Open panel",
   "common.panel.close": "Close panel",
   "common.panel.position-side": "Side",
@@ -27,6 +31,34 @@
   "common.panel.split-panel-position-label": "Split panel position",
   "common.panel.split-panel-position-description": "Choose the default split panel position for the service.",
   "common.panel.split-panel-resize-label": "Resize split panel",
+
+  "filtering.filtering-aria-label": "your choice",
+  "filtering.dismiss-aria-label": "dismiss",
+  "filtering.clear-aria-label": "Clear",
+  "filtering.placeholder": "Finding {{resource}}",
+  "filtering.group-values-text": "Values",
+  "filtering.group-properties-text": "Properties",
+  "filtering.operators-text": "Operators",
+  "filtering.operation-and-text": "and",
+  "filtering.operation-or-text": "or",
+  "filtering.operator-less-text": "Less than",
+  "filtering.operator-less-or-equal-text": "Less than or equal",
+  "filtering.operator-greater-text": "Greater than",
+  "filtering.operator-greater-or-equal-text": "Greater than or equal",
+  "filtering.operator-contains-text": "Contains",
+  "filtering.operator-does-not-contain-text": "Does not contain",
+  "filtering.operator-equals-text": "Equals",
+  "filtering.operator-does-not-equal-text": "Does not equal",
+  "filtering.edit-token-header": "Edit filter",
+  "filtering.property-text": "Property",
+  "filtering.operator-text": "Operator",
+  "filtering.value-text": "Value",
+  "filtering.cancel-action-text": "Cancel",
+  "filtering.apply-action-text": "Apply",
+  "filtering.all-properties-label": "All properties",
+  "filtering.token-limit-show-more": "Show more",
+  "filtering.token-limit-show-fewer": "Show fewer",
+  "filtering.clear-filters-text": "Clear filters",
 
   "car-activation.breadcrumb": "Car activation",
   "car-activation.copied-to-clipboard": "copied to clipboard",
@@ -67,12 +99,10 @@
   "carmodelupload.loading": "Loading resources",
   "carmodelupload.modelname": "ModelName",
   "carmodelupload.no-cars": "No cars",
-  "carmodelupload.no-matches": "No matches",
   "carmodelupload.online": "No cars are currently online.",
   "carmodelupload.please-wait": "Please wait whilst model upload jobs are submitted",
   "carmodelupload.status": "Status",
   "carmodelupload.upload": "Upload models to car",
-  "carmodelupload.we-cant-find-a-match": "We can't find a match",
 
   "carmodelupload-modal.file-regex": "does not match regex: ^[a-zA-Z0-9-_]+.tar.gz$",
 
@@ -380,7 +410,6 @@
   "models.loading-models": "Loading models",
   "models.model-information": "Model information",
   "models.model-name": "Model name",
-  "models.no-matches": "No matches",
   "models.no-models-to-display": "No models to display.",
   "models.no-models": "No models",
   "models.delete-models": "Delete models",
@@ -388,7 +417,6 @@
   "models.page-size-label": "models",
   "models.upload-date": "Upload date",
   "models.user-name": "User name",
-  "models.we-cant-find-a-match": "We can't find a match",
   "models.model-id": "ID",
   "models.md5-hash": "Model MD5",
   "models.md5-hash-metadata": "Metadata MD5",
@@ -417,15 +445,17 @@
   "table.match": "match",
   "table.matches": "matches",
   "table.next-page": "Next page",
-  "table.no-matches": "No matches",
   "table.preferences": "Preferences",
   "table.previous-page": "Previous page",
   "table.registration-date": "Registration date",
   "table.select-page-size": "Select page size",
   "table.select-visible-columns": "Select visible columns",
-  "table.we-cant-find-a-match": "We can't find a match",
   "table.wrap-lines": "Wrap lines",
   "table.wrap-lines-description": "Check to see all the text and wrap the lines",
+  "table.striped-rows": "Striped rows",
+  "table.striped-rows-description": "Select to add alternating shaded rows",
+  "table.content-density": "Compact mode",
+  "table.content-density-description": "Select to display content in a denser, more compact mode",
 
   "timekeeper.automated-timer-connected": "Automated timer connected",
   "timekeeper.automated-timer-not-connected": "Automated timer not connected",
