--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -340,6 +340,7 @@
   "users.breadcrumb": "Create user",
   "users.description": "User creation",
   "users.header": "Create user",
+  "users.information": "Users information",
   "users.header-list": "Users List",
   "users.header-username": "Username",
   "users.header-email": "Email address",
